sending the request to upload an image in add-post.component.ts

--- a/frontend/src/app/modules/posts/components/add-post/add-post.component.html
+++ b/frontend/src/app/modules/posts/components/add-post/add-post.component.html
@@ -11,6 +11,7 @@
             Post
           </ng-container>
         </button>
+        <input #imageInput alt="lmao" type="file" accept="image/*" (change)="processImage(imageInput)" />
       </div>
     </div>
   </form>
