--- a/frontend/src/app/modules/posts/components/add-post/add-post.component.html
+++ b/frontend/src/app/modules/posts/components/add-post/add-post.component.html
@@ -9,14 +9,17 @@
 <!--          dummy element to center the image because i can't into css-->
           <span class="w-[30px]"></span>
           <img [src]="selectedFile.src" class="max-h-[200px] rounded-[20px]"  alt="Your image"/>
-          <button class="absolute -top-[10px] -left-[20px] bg-black opacity-50 rounded-full w-[30px] h-[30px]">
+          <button
+            class="absolute -top-[10px] -left-[20px] bg-black opacity-50 rounded-full w-[30px] h-[30px]"
+            (click)="deleteImage()"
+            type="button">
             <span class="material-symbols-outlined text-[30px] text-white">close</span>
           </button>
         </div>
         <div class="flex flex-row justify-end gap-4">
           <label style="background: #ef9fbc" class="app-btn border-none">
             <span class="material-symbols-outlined">add_photo_alternate</span>
-            <input #imageInput alt="lmao" type="file" accept="image/*" (change)="processImage(imageInput)" class="hidden"/>
+            <input #imageInput id="add-post-image-input" alt="lmao" type="file" accept="image/*" (change)="processImage(imageInput)" class="hidden"/>
           </label>
           <button [disabled]="isLoading" class="app-btn btn-primary">
             <span *ngIf="isLoading" class="loading loading-spinner"></span>
