--- a/frontend/src/app/modules/posts/components/post/post/post.component.html
+++ b/frontend/src/app/modules/posts/components/post/post/post.component.html
@@ -19,8 +19,19 @@
       </div>
     </div>
     <p *ngIf="!isEdited" style="max-width: 100%" class="m-[1px] break-words whitespace-pre-line">{{post.content}}</p>
-    <app-edit-post [authorId]="post.author.userId" class="-translate-y-[24px]" (contentUpdated)="updateContent($event)" [postId]="post.postId" [currentContent]="post.content" *ngIf="isEdited"></app-edit-post>
+    <app-edit-post
+      *ngIf="isEdited"
+      class="-translate-y-[24px]"
+      [authorId]="post.author.userId"
+      [postId]="post.postId"
+      [currentContent]="post.content"
+      [imageId]="post.mediaId"
+      (contentUpdated)="updateContent($event)"
+      (imageDeleted)="removeImage()"></app-edit-post>
     <figure *ngIf="!imageLoading() && imageUrl"><img [src]="imageUrl" alt="post image" /></figure>
+    <div *ngIf="!imageUrl && imageLoading()" class="mx-auto h-[200px] w-full bg-gray-300 rounded-[20px] flex flex-col justify-center">
+      <app-loading-spinner class="loading loading-spinner loading-lg mx-auto"></app-loading-spinner>
+    </div>
     <app-post-bottom-bar [post]="post" (changeReaction)="changeReaction($event)"></app-post-bottom-bar>
   <br/>
   <app-comment-list (contentDeleted)="handleCommentDeletion()" (contentAdded)="handleCommentAdding()" [postId]="post.postId"></app-comment-list>
