--- a/frontend/src/app/modules/profiles/components/profile/profile.component.html
+++ b/frontend/src/app/modules/profiles/components/profile/profile.component.html
@@ -12,7 +12,8 @@
             </div>
             <input #imageInput id="add-post-image-input" alt="lmao" type="file" accept="image/*" (change)="processImage(imageInput)" class="hidden"/>
           </label>
-          <img src="https://tapety.tja.pl/obrazki/tja_normalne/166120.jpg" />
+          <img [src]="avatarSrc" alt="profile photo" [ngClass]="{'filter brightness-50 blur-[1px]': imageLoading(), 'bg-black': true}"/>
+          <app-loading-spinner [isLoading]="imageLoading()" class="absolute -top-[10px] left-[70px] text-white "></app-loading-spinner>
         </div>
       </div>
       <div class="flex flex-col justify-end w-full">
