--- a/frontend/src/app/modules/posts/components/comment/comment.component.html
+++ b/frontend/src/app/modules/posts/components/comment/comment.component.html
@@ -1,11 +1,7 @@
 <div class="card py-2 px-2 w-[470px] bg-base-100 shadow-xl " >
   <div class="flex items-center">
     <div class="w-1/8">
-      <div class="avatar m-1">
-        <div class="w-10 rounded-full">
-          <img src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg" />
-        </div>
-      </div>
+      <app-user-avatar [src]="comment.author.profilePhotoId" size="sm" class="m-1"></app-user-avatar>
     </div>
     <div class="pl-[2px] -mt-[8px]">
       <h2 class="text-sm font-semibold">{{comment.author.fullName}}</h2>
