--- a/frontend/src/app/modules/profiles/components/user-profile-navigation/user-profile-navigation.component.html
+++ b/frontend/src/app/modules/profiles/components/user-profile-navigation/user-profile-navigation.component.html
@@ -3,6 +3,6 @@
    <app-user-profile-navigation-item label="Info" icon="info" route="info"></app-user-profile-navigation-item>
    <app-user-profile-navigation-item label="Posts" icon="post" route="posts"></app-user-profile-navigation-item>
    <app-user-profile-navigation-item label="Friends" icon="group" route="friends"></app-user-profile-navigation-item>
-   <app-user-profile-navigation-item label="Saved" icon="bookmark" route="saved"></app-user-profile-navigation-item>
+   <app-user-profile-navigation-item *ngIf="authState().userId === userId" label="Saved" icon="bookmark" route="saved"></app-user-profile-navigation-item>
   </ul>
 </nav>
