--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -25,7 +25,7 @@
   </nav>
   <!-- user menu-->
   <div *ngIf="authState().isLoggedIn" class="navbar-end mr-4 flex gap-8 w-100 lg:mr-16">
-    <div class="flex flex-row gap-2 cursor-pointer sm:gap-4" [routerLink]="['profiles/', authState().userId]">
+    <div class="flex flex-row gap-2 cursor-pointer sm:gap-4" [routerLink]="['profiles/', authState().userId, 'info']">
       <h2 class="text-lg font-semibold my-auto hidden min-[320px]:block select-none">{{ authState().firstName }}</h2>
       <app-user-avatar [src]="authState().profilePhotoId" size="xl"></app-user-avatar>
     </div>
