--- a/frontend/src/app/shared/components/user-avatar/user-avatar.component.html
+++ b/frontend/src/app/shared/components/user-avatar/user-avatar.component.html
@@ -1,5 +1,5 @@
 <div class="avatar">
-  <div [ngClass]="{ 'rounded-full': true, 'w-14': size === 'xl', 'w-12': size === 'm', 'w-10': size === 'sm'}">
+  <div [ngClass]="{ 'rounded-full': true, 'w-14': size === 'xl', 'w-12': size === 'm', 'w-10': size === 'sm', 'w-20': size === 'xxl'}">
     <img [src]="avatarSrc" alt="profile photo" [ngClass]="{'filter brightness-50 blur-[1px]': imageLoading(), 'bg-black': true}"/>
     <span
       *ngIf="imageLoading()"
