--- a/frontend/src/app/modules/chat/components/main-view/main-view.component.html
+++ b/frontend/src/app/modules/chat/components/main-view/main-view.component.html
@@ -1,36 +1,34 @@
 <div class="chat-page">
   <div class="sidebar">
     <div *ngFor="let preview of chatPreviews" (click)="selectChat(preview)">
-      <app-chat-preview [chatPreview]="preview" [userId]="userId"></app-chat-preview>
+      <app-chat-preview [chatPreview]="preview" [userId]="state().userId"></app-chat-preview>
     </div>
   </div>
   <div class="chat-area" *ngIf="selectedChat">
     <div class="chat-header">
       <div class="avatar">
         <ng-container *ngIf="selectedChat.lastMessage.fromUser.profilePhotoId; else initials">
-          <img [src]="selectedChat.lastMessage.fromUser.profilePhotoId" alt="Profile Image" />
+          <img [src]="selectedChat.lastMessage.fromUser.profilePhotoId" alt="Profile Image">
         </ng-container>
         <ng-template #initials>
-          XD
+          <span>XD</span>
         </ng-template>
       </div>
       <div class="name">{{ selectedChat.conversationGetDTO.conversationName }}</div>
     </div>
-    <div class="chat-messages" #chatMessages>
-      <div class="message" *ngFor="let message of messages" [ngClass]="{'own-message': message.fromUser.userId === userId}">
-        <div class="message-content">
-          {{ message.content }}
-        </div>
-        <div class="message-time">
-          {{ message.fromUser.fullName }}
-        </div>
+    <div class="chat-messages">
+      <div *ngFor="let message of messages" [ngClass]="{'own-message': message.fromUser.userId === state().userId}" class="message">
+        <div class="message-content">{{ message.content }}</div>
+        <div class="message-time">{{ message.fromUser.fullName }}</div>
       </div>
     </div>
-    <div class="chat-input-container">
-      <div class="chat-input">
-        <input [(ngModel)]="messageContent" type="text" placeholder="Aa" />
-        <button (click)="sendMessage()">Send</button>
-      </div>
+    <div class="card">
+      <form (submit)="sendMessage()" class="flex w-full items-center">
+        <textarea [formControl]="contentControl" (keydown.enter)="sendMessage()" class="text-black" placeholder="Add a comment..."></textarea>
+        <button *ngIf="!isLoading" class="material-symbols-outlined cursor-pointer" type="submit">send</button>
+        <div *ngIf="isLoading" class="loading loading-spinner"></div>
+      </form>
     </div>
+
   </div>
 </div>
