friends only parameter in post list, don't have an endpoint yet tho

--- a/frontend/src/app/modules/posts/components/friends-page/friends-page.component.html
+++ b/frontend/src/app/modules/posts/components/friends-page/friends-page.component.html
@@ -6,4 +6,4 @@
   </div>
 </div>
 <h1 class="w-[500px] mx-auto text-xl font-semibold mb-2">Friends' Posts</h1>
-<app-post-list [favouritePosts]="true"></app-post-list>
+<app-post-list [friendsOnly]="true"></app-post-list>
