Deleted unused function

--- a/frontend/src/app/modules/chat/components/chat-preview/chat-preview.component.css
+++ b/frontend/src/app/modules/chat/components/chat-preview/chat-preview.component.css
@@ -8,6 +8,7 @@
 .avatar {
   width: 40px;
   height: 40px;
+  min-width: 40px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -27,6 +28,7 @@
 
 .last-message {
   color: gray;
+  word-break: break-word;
 }
 
 .status {
